# Portkill

./: .gitignore  README.md  pyproject.toml
portkill/: __init__.py  __main__.py  app.py
portkill/models/: __init__.py  history.py  process.py
portkill/screens/: __init__.py  confirm_dialog.py  connections.py  docker.py  graph.py  heatmap.py  history.py  http_monitor.py  logs.py  main.py  port_scanner.py  process_tree.py
portkill/services/: __init__.py  alerts.py  process_manager.py
portkill/styles/: theme.tcss
portkill/utils/: __init__.py  constants.py
portkill/widgets/: __init__.py  charts.py  custom_header.py  details_panel.py  filter_bar.py  process_table.py
tests/: __init__.py
